# lambdalib

./: .coderabbit.yaml  .flake8  .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
.github/workflows/config/: verible.rules
docs/: README.md
docs/tests/: README.md
dplib/rtl/: la_dmux2.v  la_dmux3.v  la_dmux4.v  la_dmux5.v  la_dmux6.v  la_dmux7.v  la_dmux8.v
examples/chip/: chip.py
examples/chip/rtl/: chip.v  chip_iomap.vh
examples/sram/rtl/: sram.v
iolib/rtl/: la_ioanalog.v  la_iobidir.v  la_ioclamp.v  la_iocorner.v  la_iocut.v  la_ioinput.v  la_iopadring.v  la_iopoc.v  la_iosection.v  la_ioshort.v  la_ioside.v  la_iovdd.v  la_iovdda.v  la_iovddio.v  la_iovss.v  la_iovssa.v  la_iovssio.v  la_ioxtal.v  la_pt.v
iolib/stub/: la_iocorner.v  la_iovss.v
iolib/testbench/: build.sh  tb_la_iopadring.v
lambdalib/: __init__.py  _common.py  lambdalib.py
lambdalib/analoglib/: __init__.py
lambdalib/analoglib/la_pll/: la_pll.py
lambdalib/auxlib/: __init__.py
lambdalib/fpgalib/: __init__.py  la_lut4.v
lambdalib/iolib/: README.md  __init__.py
lambdalib/padring/: README.md  __init__.py  padring.py
lambdalib/ramlib/: __init__.py  _common.py  make.py  ramlib.py
lambdalib/reusable_tests/: cocotb_common.py
lambdalib/stdlib/: __init__.py  stdlib.py
lambdalib/syslib/: __init__.py
lambdalib/utils/: __init__.py  _tb_common.py
lambdalib/veclib/: __init__.py
lambdalib/vectorlib/: __init__.py
padring/: padring.py
padring/floorplan/: la_iopadring.py  log  replay.sh  vivado.jou
padring/rtl/: la_iopadring.v  la_iopadring.vh  la_iosection.v  la_ioside.v
padring/testbench/: build.sh  tb_la_iopadring.cpp  tb_la_iopadring.v
ramlib/rtl/: la_asyncfifo.v  la_ram.v  la_spram.v  la_spregfile.v  la_syncfifo.v
scripts/: gen_classes.py  rename.py  replace.py  template.py.j2
stdlib/rtl/: la_and3.v  la_and4.v  la_ao21.v  la_ao211.v  la_ao31.v  la_ao32.v  la_aoi21.v  la_aoi22.v  la_aoi221.v  la_aoi222.v  la_aoi31.v  la_aoi311.v  la_buf.v  la_clkicgand.v  la_clkicgor.v  la_clkinv.v  la_clkmux2.v  la_clkmux4.v  la_clknand2.v  la_clknor2.v  la_clkxor2.v  la_delay.v  la_dffnq.v  la_dffqn.v  la_dffrqn.v  la_dmux2.v  la_dmux3.v  la_dmux4.v  la_dmux5.v  la_dmux6.v  la_dmux7.v  la_dmux8.v  la_dpram.v  la_dsync.v  la_dsync_rst.v  la_inv.v  la_isohi.v  la_isolo.v  la_latnq.v  la_latq.v  (+32 more)
syslib/rtl/: la_eth.v  la_gpio.v  la_i2c.v  la_jtag.v  la_pwm.v  la_qspi.v  la_sd.v  la_spi.v  la_timer.v  la_uart.v  la_usb.v
tests/: conftest.py  test_classes.py  test_cocotb_runner.py  test_generate.py  test_lambdalib_tech_library.py  test_lint.py  test_local_detect.py  test_memory_templates.py  test_memory_templates_functional.py  test_memory_templates_lint.py  test_paths.py  test_ramlib_write.py  test_rtl.py  test_setup.py  test_techlib.py
tests/auxlib/: test_la_dsync.py
tests/cocotb/: __init__.py  test_dpram.py  test_spram.py  test_spregfile.py  test_tdpram.py
tests/cocotb_tests/: __init__.py  _common.py  test_dpram.py  test_spram.py  test_spregfile.py  test_tdpram.py
tests/ramlib/: test_la_asyncfifo.py  test_la_dpram.py  test_la_spram.py  test_la_spregfile.py  test_la_tdpram.py
vectorlib/rtl/: la_mux.v  la_vinv.v  la_visolo.v  la_vmux.v  la_vmux4.v  la_vmux5.v  la_vmux6.v  la_vmux8.v
(+733 files in other folders)
