[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm[toml] >= 8"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["lambdalib"]

[project]
name = "lambdalib"
authors = [{name = "Zero ASIC"}]
description = "Standardized ASIC design libraries"
readme = "README.md"
urls = {Homepage = "https://github.com/siliconcompiler/lambdalib"}
requires-python = ">= 3.9"
license = {file = "LICENSE"}
dependencies = [
    "siliconcompiler >= 0.35.0",
    "Jinja2 >= 3.1.3"
]
dynamic = ['version']

[tool.setuptools.dynamic]
version = {attr = "lambdalib.__version__"}

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "flake8 == 7.3.0",
    "pytest == 8.4.2",
    "pytest-timeout == 2.4.0",
    "cocotb == 2.0.1",
    "cocotb-bus == 0.3.0"
]

[tool.pytest.ini_options]
markers = [
    "eda: this test requires EDA tools installed to run.",
]
pythonpath = [
    "tests"
]
testpaths = [
    "tests"
]
timeout = "60"
